# report_news_agent_alert

./: .gitignore  README.md  app.py  emails.csv  get_refresh_token.py  index.html  prompt.py  pyproject.toml
data/: email.csv  user_emails.csv
src/tools/: create_report_tool.py  get_news_tool.py  saving_email_tool.py  sending_emails.py  time_tool.py
